--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@dashevo/dashcore-lib",
+  "name": "@socialruins/raptoreumcore-lib",
   "version": "0.19.44",
-  "description": "A pure and powerful JavaScript Dash library.",
+  "description": "A pure and powerful JavaScript Raptoreum library.",
   "author": "Dash Core Group, Inc. <dev@dash.org>",
   "main": "index.js",
-  "unpkg": "dist/dashcore-lib.min.js",
+  "unpkg": "dist/raptoreumcore-lib.min.js",
   "scripts": {
     "prepublishOnly": "npm run build",
     "lint": "eslint .",
@@ -94,7 +94,7 @@
     }
   ],
   "keywords": [
-    "dash",
+    "raptoreum",
     "transaction",
     "address",
     "p2p",
@@ -112,13 +112,13 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/dashevo/dashcore-lib.git"
+    "url": "https://github.com/socialruins/raptoreumcore-lib.git"
   },
   "types": "index.d.ts",
   "bugs": {
-    "url": "https://github.com/dashevo/dashcore-lib/issues"
+    "url": "https://github.com/socialruins/raptoreumcore-lib/issues"
   },
-  "homepage": "https://github.com/dashevo/dashcore-lib",
+  "homepage": "https://github.com/socialruins/raptoreumcore-lib",
   "dependencies": {
     "@dashevo/x11-hash-js": "^1.0.2",
     "@types/node": "^12.12.47",
